--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -23,3 +23,6 @@ jobs:
       run: ./gradlew jacocoTestReport
     - name: Data to codecov
       run: bash <(curl -s https://codecov.io/bash)
+    - name: checkstyle
+      run: ./gradlew checkstyleMain
+
